// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Component renders as basic label 1`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="nav-bar-menu-label"
    >
      LABEL
    </div>
    <span
      class="gds-badge pill danger counter"
    >
      1
    </span>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders as basic label 2`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="nav-bar-menu-label"
    >
      LABEL
    </div>
    <span
      class="gds-badge pill danger counter"
    >
      1
    </span>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders as basic label 3`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="nav-bar-menu-label"
    >
      LABEL
    </div>
    <span
      class="gds-badge pill danger counter"
    >
      1
    </span>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with interactive subitems 1`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="nav-bar-menu-label"
    >
      ITEM
    </div>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with interactive subitems 2`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="nav-bar-menu-label"
    >
      ITEM
    </div>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with interactive subitems 3`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="nav-bar-menu-label"
    >
      ITEM
    </div>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with interactive subitems 4`] = `
<div>
  <div
    class="nav-bar-menu-item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="nav-bar-menu-label"
    >
      ITEM
    </div>
    <i
      class="nav-bar-menu-caret icon"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;
